# Deximon

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_auth_foundation.py
apps/api/app/: main.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/dependencies/: auth.py
apps/api/app/models/: __init__.py  binder.py  card.py  chat.py  listing.py  user.py
apps/api/app/routes/: auth.py  health.py  profiles.py
apps/api/app/schemas/: auth.py  user.py
apps/api/app/scripts/: seed.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py
apps/scanner/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/scanner/app/: main.py
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: Nav.tsx  NotificationBell.tsx  UserMenu.tsx  Wordmark.tsx
apps/web/src/lib/: fetchAPI.test.ts  fetchAPI.ts
data/postgres/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
data/postgres/base/16384/: 2619  pg_internal.init
data/postgres/base/4/: 2619
data/postgres/base/5/: pg_internal.init
data/postgres/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data/postgres/pg_stat/: pgstat.stat
docs/api/: README.md  auth.yaml  chat.yaml  collection.yaml  scanner.yaml
infra/: docker-compose.yml
(+15 files in other folders)
