[tool.poetry]
name = "deximon-api"
version = "0.1.0"
description = "Deximon main API: auth, profiles, binder, marketplace, chat."
authors = ["Deximon Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
email-validator = "^2.2.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg = { extras = ["binary"], version = "^3.2.3" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
"passlib" = { extras = ["bcrypt"], version = "^1.7.4" }
# Passlib 1.7.4 needs bcrypt 4.0.1 for clean, compatible backend initialization.
bcrypt = "4.0.1"
authlib = "^1.3.2"
itsdangerous = "^2.2.0"
httpx = "^0.27.2"
redis = "^5.0.8"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
types-passlib = "^1.7.7.20240819"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["alembic", "sqlalchemy", "fastapi", "pydantic"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
